//
//  FightTactixUITests.swift
//  FightTactixUITests
//
//  Created by Andrew Nero on 1/5/16.
//  Copyright © 2016 Andrew Nero. All rights reserved.
//

import XCTest

class FightTactixUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        //XCUIApplication().launch()
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        
        
        
        let iostabbar2Button = XCUIApplication().buttons["iostabbar 2"]
        iostabbar2Button.tap()
        XCUIApplication().buttons["social11"].tap()
        snapshot("one")
        iostabbar2Button.tap()
        XCUIApplication().buttons["wall clock 3"].tap()
        snapshot("two")
        iostabbar2Button.tap()
        XCUIApplication().buttons["professor8"].tap()
        snapshot("three")
        iostabbar2Button.tap()
        XCUIApplication().buttons["credit card3"].tap()
        snapshot("four")

        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
}
